<resources>

    <string name="app_name">BrainTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="refused_message">Authorisation failed</string>
    <string name="title_activity_oauth">Authorization on youtube</string>
    <string name="title_ativity_auth">AuthActivity</string>
    <string name="title_activity_refusal">Refused Access</string>
    <string name="statistics_button_text">Statistics</string>
    <string name="service_button_text">Service</string>
    <string name="targets_button_text">Settings</string>
    <string name="settings_button_text">Settings</string>
    <string name="statistic_period_setting">Select time period display information on  device</string>
    <string name="progress_period_setting">Select time period display progress on the device</string>
    <string name="set_target_button">Set</string>
    <string name="start_service_button">Start</string>
    <string name="stop_service_button">Stop</string>
    <string name="service_on">Brain Tracker: on</string>
    <string name="service_off">Brain Tracker: off</string>
    <string name="wifi_on">Wi-Fi: on</string>
    <string name="wifi_off">Wi-Fi: off</string>

    <!-- Notification -->
    <string name="notification_service_run">Brain Tracker running</string>
    <string name="notification_service_wifi_off">Brain Tracker: Wi-Fi not connected</string>

    <!-- Settings -->
    <!-- Settings Statistics Category -->
    <string name="setting_key_target_statistics">setting_statistics_target_key</string>
    <string name="setting_category_statistics">Statistics</string>
    <string name="setting_title_target_statistics">Target</string>
    <string name="setting_summary_target_statistics">brain points</string>

    <!-- Settings Notification Category -->
    <string name="setting_category_notificatione">Notification</string>
    <string name="setting_key_android_notificatione">setting_android_notification_key</string>
    <string name="setting_title_android_notifications">Android</string>
    <string name="setting_summary_android_notifications">pop-up notification</string>
    <string name="setting_key_samsung_notificatione">setting_samsung_notification_key</string>
    <string name="setting_title_watch_notifications">Samsung</string>
    <string name="setting_summary_watch_notifications">smart watch notice</string>

    <!-- Settings Resources -->
    <string name="setting_category_resources">Resources</string>
    <string name="setting_key_youtube_resources">setting_youtube_recources_key</string>
    <string name="setting_title_youtube_resources">Youtube</string>
    <string name="setting_key_facebook_resources">setting_facebook_recources_key</string>
    <string name="setting_title_facebook_resources">Facebook</string>
    <string name="setting_key_twitter_resources">setting_twitter_recources_key</string>
    <string name="setting_title_twitter_resources">Twitter</string>

    <!-- Statistics Fragment -->
    <string name="statistics_target_caption">Target: </string>
    <string name="statistics_points_caption">Brain Points: </string>
    <string name="statistics_percents_caption">Percents: </string>

</resources>