<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/serice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/service_off"
        android:textColor="@color/text_main"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/wifi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:text="@string/wifi_off"
        android:textColor="@color/text_main"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <Button
        android:id="@+id/service_button"
        style="@style/BrainTrackeFragmentButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/start_service_button" />

</LinearLayout>